--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 						<p>Finials design</p>
 					</div>
 				</a>
-				<a href="dailyUI.html" class="b5" data-animate-scroll='{"x": "-100","y": "0", "alpha": "0", "duration": "1"}'>
+				<a href="DailyUI.html" class="b5" data-animate-scroll='{"x": "-100","y": "0", "alpha": "0", "duration": "1"}'>
 					<div>
 						<h1>Daily UI</h1>
 						<p>Become a better designer in 100 days</p>
