--- a/OPA.html
+++ b/OPA.html
@@ -239,7 +239,7 @@
 				<p>課程目錄 - 圖像選單介面</p>
 			</div>
 			<div class="row2">
-			  	<img src="images/opa/opa_ani_cedaw_menu.png">
+			  	<img src="images/opa/opa_ani_cedaw_menu.jpg">
 			</div>
 			<div class="row_text">
 				<p>統一版型設計 - 互動測驗 / 回饋</p>
