--- a/OPA.html
+++ b/OPA.html
@@ -102,13 +102,16 @@
 				<p>臺北e大, 和泰汽車, 健保局, e等公務園, LCY李長榮化工, 行政院農業委員會</p>
 				<h1>UI e-learning design</h1>
 		</div>
+		<div class="container_UI_exp">
+			<div class="ui_h">
+				<img src="images/opa/opa_ui_h.jpg";>
+			</div>
+			<div class="ui_v">
+				<img src="images/opa/opa_ui_v.jpg";>
+			</div>
+		</div>
 		<div class="container_UI">
-			<div class="row2 ui_h">
-				<img src="images/opa/opa_ui_h.png";>
-			</div>
-			<div class="row2 ui_v">
-				<img src="images/opa/opa_ui_v.png";>
-			</div>
+			<div class="row2"></div>
 			<div class="row shadow">
 				<img src="images/opa/opa_ui01.jpg">
 			</div>
