--- a/OPA.html
+++ b/OPA.html
@@ -141,7 +141,7 @@
 		<div class="container_ani_v1">
 			<div class="row2">
 				<video loop="true" autoplay="autoplay" muted="true" preload="auto" width="100%" max-width="1100px" max-height="620px" margin-bottom="-20px">
-					<source type="video/mp4" src="images/opa/tgm300m.mp4"></source>
+					<source type="video/mp4" src="images/opa/tgm300m.mp4">
 				</video>
 			</div>
 		</div>	
@@ -237,7 +237,7 @@
 		<div class="container_ani_v2">
 			<div class="row2">
 				<video loop="true" autoplay="autoplay" muted="true" preload="auto" width="100%" max-width="1100px" max-height="620px" margin-bottom="-20px">
-					<source type="video/mp4" src="images/opa/e39_301_302m.mp4"></source>
+					<source type="video/mp4" src="images/opa/e39_301_302m.mp4">
 				</video>
 			</div>
 		</div>
