--- a/Vel.html
+++ b/Vel.html
@@ -218,7 +218,7 @@
 		<div class="container_decal_v">
 		<div class="row2">
 				<video loop="true" autoplay="autoplay" muted="true" preload="auto" width="100%" max-width="1100px" max-height="620px" margin-bottom="-20px">
-					<source type="video/mp4" src="images/VEL/SYN.mp4"></source>
+					<source type="video/mp4" src="images/VEL/SYN.mp4">
 				</video>
 		</div>
 		</div>
