--- a/OPA.html
+++ b/OPA.html
@@ -133,7 +133,7 @@
 		</div>
 	</section>
 	
-	<section class="white" id="ani01">
+	<section class="lightblue" id="ani01">
 		<div class="title">
 				<p>臺北市政府公務人員訓練處 - Hot剋任務 愛地球關鍵行動</p>
 				<h1>e-Learning Animation</h1>
@@ -147,7 +147,7 @@
 		</div>	
 		<div class="container_ani">
 			<div class="row2 AAA">
-			  	<img src="images/opa/3A.png">
+			  	<a href="https://elearning.taipei/mpage/home/view_honors/10" target="_blank"><img src="images/opa/3A.JPG"></a>
 			</div>
 			<div class="row2 AAA">
 				<ul>
@@ -229,7 +229,7 @@
 		</div>
 	</section>
 	
-<section class="white" id="ani02">
+<section class="lightblue" id="ani02">
 		<div class="title">
 				<p>行政院人事行政總處公務人力發展中心 - 希望與導向CEDAW公約介紹</p>
 				<h1>e-Learning Animation</h1>
@@ -246,7 +246,7 @@
 				<p>課程目錄 - 圖像選單介面</p>
 			</div>
 			<div class="row2">
-			  	<img src="images/opa/opa_ani_cedaw_menu.jpg">
+			  	<img src="images/opa/opa_ani_cedaw_menu.png">
 			</div>
 			<div class="row_text">
 				<p>統一版型設計 - 互動測驗 / 回饋</p>
