--- a/GS.html
+++ b/GS.html
@@ -171,7 +171,7 @@
 		</div>	
 	 <div class="container_fb">
 		
-				<a href="https://www.facebook.com/gskillofficial/videos/1627079610668856/" target="blank" ><img src="images/GS/GS_fb01.jpg" class="bt" ></a>
+				<a href="https://www.facebook.com/gskillofficial/videos/1627079610668856/" target="blank" ><img src="images/GS/fb06@2x.png" class="bt" ></a>
 				<a href="https://www.facebook.com/gskillofficial/videos/1727404663969683/" target="blank"><img src="images/GS/fb05@2x.png" class="bt" ></a>
 				<img src="images/GS/fb01@2x.png" alt="">
 				
