--- a/GC.html
+++ b/GC.html
@@ -165,7 +165,7 @@
 		</div>
 		<div class="container_pack">
 				<img src="images/GC/GC_packages01.png" style="max-width:475px">
-				<img src="images/GC/GC_packages02.png" style="max-width:453px">
+				<img src="images/GC/GC_packages02.jpg" style="max-width:453px">
 				<img src="images/GC/GC_packages03.jpg" style="max-width:497px">
 				<img src="images/GC/GC_packages04.jpg" style="max-width:333px">
 				<img src="images/GC/GC_packages05.jpg" style="max-width:517px">
