--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 	<section>
 		<div class="container">
 				<a href="GS.html" class="b1 shadow" data-animate-scroll='{"x": "-100","y": "0", "alpha": "0", "duration": "1"}'>
-					<img src="images/GS/GS_gaming03@2x.jpg">
+					<img src="images/GS/GS_gaming03.jpg">
 					<div class="project-info1">
 						<h1>G.Skill</h1>
 						<p>Gaming style graphics and videos</p>
