--- a/GS.html
+++ b/GS.html
@@ -170,18 +170,18 @@
 				<h1>Post Banner</h1>
 		</div>	
 	 	<div class="container_fb">
-				<a href="https://www.facebook.com/gskillofficial/videos/1627079610668856/" target="blank" ><img src="images/GS/fb06@2x.png" class="bt" ></a>
-				<a href="https://www.facebook.com/gskillofficial/videos/1727404663969683/" target="blank"><img src="images/GS/fb05@2x.png" class="bt" ></a>
-				<img src="images/GS/fb01@2x.png" alt="">
-				<a href="https://www.facebook.com/gskillofficial/videos/1634011809975636/?__tn__=-R" target="blank" ><img src="images/GS/fb10@2x.png" class="bt" ></a>
-				<a href="https://www.facebook.com/gskillofficial/videos/2247231925597790/" target="blank" ><img src="images/GS/fb04@2x.png" class="bt" ></a>
-				<a href="https://www.facebook.com/gskillofficial/videos/1768480313195451/" target="blank" ><img src="images/GS/fb16@2x.png" class="bt" ></a>
-				<img src="images/GS/fb03@2x.png" alt="">
-				<img src="images/GS/fb08@2x.png" alt="">
-				<img src="images/GS/fb15@2x.png" alt="">
-				<img src="images/GS/fb09@2x.png" alt="">
-				<img src="images/GS/fb14@2x.png" alt="">
-				<img src="images/GS/fb12@2x.png" alt="">
+				<a href="https://www.facebook.com/gskillofficial/videos/1627079610668856/" target="blank" ><img src="images/GS/fb06@2x.jpg" class="bt" ></a>
+				<a href="https://www.facebook.com/gskillofficial/videos/1727404663969683/" target="blank"><img src="images/GS/fb05@2x.jpg" class="bt" ></a>
+				<img src="images/GS/fb01@2x.jpg">
+				<a href="https://www.facebook.com/gskillofficial/videos/1634011809975636/?__tn__=-R" target="blank" ><img src="images/GS/fb10@2x.jpg" class="bt" ></a>
+				<a href="https://www.facebook.com/gskillofficial/videos/2247231925597790/" target="blank" ><img src="images/GS/fb04@2x.jpg" class="bt" ></a>
+				<a href="https://www.facebook.com/gskillofficial/videos/1768480313195451/" target="blank" ><img src="images/GS/fb16@2x.jpg" class="bt" ></a>
+				<img src="images/GS/fb03@2x.jpg">
+				<img src="images/GS/fb08@2x.jpg">
+				<img src="images/GS/fb15@2x.jpg">
+				<img src="images/GS/fb09@2x.jpg">
+				<img src="images/GS/fb14@2x.jpg">
+				<img src="images/GS/fb12@2x.jpg">
 		</div>	
 	</section>
 	
