--- a/GS.html
+++ b/GS.html
@@ -126,11 +126,11 @@
 		</div>
 	  </div>
 		  <div class="container_ov">
-				<img src="images/GS/GS_ov01.jpg" alt="">
-				<img src="images/GS/GS_ov02.jpg" alt="">
-				<img src="images/GS/GS_ov03.jpg" alt="">
-				<img src="images/GS/GS_ov04.jpg" alt="">
-				<img src="images/GS/GS_ov05.jpg" alt="">
+				<img src="images/GS/GS_ov01.jpg">
+				<img src="images/GS/GS_ov02.jpg">
+				<img src="images/GS/GS_ov03.jpg">
+				<img src="images/GS/GS_ov04.jpg">
+				<img src="images/GS/GS_ov05.jpg">
 		  </div>
 	</section>
 	
@@ -142,9 +142,9 @@
 		</div>
 	  </div>
 		  <div class="container_ov">
-				<img src="images/GS/GS_landingpage01.png" alt="">
-				<img src="images/GS/GS_landingpage02.png" alt="">
-				<img src="images/GS/GS_landingpage03.png" alt="">
+				<img src="images/GS/GS_landingpage01.png">
+				<img src="images/GS/GS_landingpage02.png">
+				<img src="images/GS/GS_landingpage03.png" >
 		  </div>
 	</section>
 	
