--- a/GC.html
+++ b/GC.html
@@ -52,7 +52,7 @@
 							</div>
 							<div class="box one-span">
 								<p>Packages</p>
-								<a href="#package" onclick="tagFunction()"><img src="images/GC/GC_packages02.png"></a>
+								<a href="#package" onclick="tagFunction()"><img src="images/GC/GC_packages02.jpg"></a>
 							</div>
 							<div class="box wide-span">
 								<p>Animation</p>
