--- a/OPA.html
+++ b/OPA.html
@@ -52,7 +52,7 @@
 							</div>
 							<div class="box one-span">
 								<p>Packages</p>
-								<a href="GC.html#package"><img src="images/GC/GC_packages02.png"></a>
+								<a href="GC.html#package"><img src="images/GC/GC_packages02.jpg"></a>
 							</div>
 							<div class="box wide-span">
 								<p>Animation</p>
