--- a/GS.html
+++ b/GS.html
@@ -104,16 +104,16 @@
 		</div>
 		<div class="container_gra">
 			<div class="row">
-				<img src="images/GS/GS_graphic01.jpg" alt="">
+				<img src="images/GS/GS_graphic01.jpg">
 			</div>
 			<div class="row">
-				<img src="images/GS/GS_graphic02.jpg" alt="">
+				<img src="images/GS/GS_graphic02.jpg">
 			</div>
 			<div class="row2">
-				<img src="images/GS/GS_graphic03.png" alt="">
+				<img src="images/GS/GS_graphic03.png">
 			</div>
 			<div class="row2">
-				<img src="images/GS/GS_graphic.png" alt="">
+				<img src="images/GS/GS_graphic04.png">
 			</div>		
 		</div>
 	</section>
