--- a/Vel.html
+++ b/Vel.html
@@ -131,7 +131,7 @@
 				<img src="images/VEL/V_graphic04.png">
 			</div>
 			<div class="row2">
-				<img src="images/VEL/V_graphic05.png">
+				<img src="images/VEL/V_graphic05.jpg">
 			</div>	
 		</div>
 	</section>
