--- a/Vel.html
+++ b/Vel.html
@@ -122,7 +122,7 @@
 				<img src="images/VEL/V_graphic01.jpg">
 			</div>
 			<div class="row">
-				<img src="images/VEL/V_graphic02.png">
+				<img src="images/VEL/V_graphic02.jpg">
 			</div>
 			<div class="row w540">
 				<img src="images/VEL/V_graphic03.jpg">
