--- a/Vel.html
+++ b/Vel.html
@@ -30,7 +30,7 @@
 							<div class="box tall-span">
 								<p>Graphic</p>
 								<a href="GS.html#GS_gra"><img src="images/GS/GS_graphic01.jpg"></a>
-								<a href="#VEL_gra" onclick="tagFunction()"><img src="images/VEL/V_graphic05.png"></a>
+								<a href="#VEL_gra" onclick="tagFunction()"><img src="images/VEL/V_graphic05.jpg"></a>
 							</div>
 							<div class="box one-span">
 								<p>BI</p>
