--- a/OPA.html
+++ b/OPA.html
@@ -43,7 +43,7 @@
 							<div class="box wide-span">
 								<p>UI</p>
 								<a href="#opa_ui" onclick="tagFunction()"><img src="images/opa/opa_ui02.jpg"></a>
-								<a href="DailyUI.html#ui"><img src="images/dailyUI/003-LandingPage.png"></a>
+								<a href="DailyUI.html#ui"><img src="images/dailyUI/003-LandingPage.jpg"></a>
 							</div>
 							
 							<div class="box one-span">
