--- a/DailyUI.html
+++ b/DailyUI.html
@@ -91,7 +91,7 @@
 					<h1>#DAY003</h1>
 					<p>Landing Page</p>
 				</div>
-				<img src="images/dailyUI/003-LandingPage.png">
+				<img src="images/dailyUI/003-LandingPage.jpg">
 			</div>
 		</div>	
 		<div class="container_dailyui">
