--- a/Vel.html
+++ b/Vel.html
@@ -162,16 +162,16 @@
 		</div>
 		<div class="container_gra">
 			<div class="row2">
-				<img src="images/VEL/V_display01.png" alt="">
+				<img src="images/VEL/V_display01.jpg">
 			</div>
 			<div class="row2">
-				<img src="images/VEL/V_display02.png" alt="">
+				<img src="images/VEL/V_display02.jpg">
 			</div>
 			<div class="row">
-				<img src="images/VEL/V_display03.jpg" alt="">
+				<img src="images/VEL/V_display03.jpg">
 			</div>
 			<div class="row">
-				<img src="images/VEL/V_display04.jpg" alt="">
+				<img src="images/VEL/V_display04.jpg">
 			</div>
 		</div>
 	</section>
