--- a/Vel.html
+++ b/Vel.html
@@ -226,55 +226,55 @@
 		<div class="container_gra">
 			
 			<div class="row shadow">
-				<img src="images/VEL/V_decals11.jpg" alt="">
+				<img src="images/VEL/V_decals11.jpg">
 			</div>
 			<div class="row shadow">
-				<img src="images/VEL/V_decals12.jpg" alt="">
+				<img src="images/VEL/V_decals12.jpg">
 			</div>
 			<div class="row">
-				<img src="images/VEL/V_decals13.jpg" alt="">
+				<img src="images/VEL/V_decals13.jpg">
 			</div>
 			<div class="row">
-				<img src="images/VEL/V_decals14.jpg" alt="">
+				<img src="images/VEL/V_decals14.jpg">
 			</div>
 			<div class="row">
-				<img src="images/VEL/V_decals15.jpg" alt="">
+				<img src="images/VEL/V_decals15.jpg">
 			</div>
 			<div class="row">
-				<img src="images/VEL/V_decals16.jpg" alt="">
+				<img src="images/VEL/V_decals16.jpg">
 			</div>			
 			<div class="row_text">
 				<p>Color study & Marketing research</p>
 			</div>
 			<div class="row2 colorstudy1">
-				<img src="images/VEL/ColorStudy1.jpg" >
+				<img src="images/VEL/ColorStudy1.jpg">
 			</div>
 			<div class="row2 colorstudy2">
 				<img src="images/VEL/ColorStudy2.jpg">
 			</div>
 			<div class="row">
-				<img src="images/VEL/V_decals03.jpg" alt="">
+				<img src="images/VEL/V_decals03.jpg">
 			</div>
 			<div class="row">
-				<img src="images/VEL/V_decals04.jpg" alt="">
+				<img src="images/VEL/V_decals04.jpg">
 			</div>
 			<div class="row"> 
-				<img src="images/VEL/V_decals05.jpg" alt="">
+				<img src="images/VEL/V_decals05.jpg">
 			</div>
 			<div class="row">
-				<img src="images/VEL/V_decals17.jpg" alt="">
+				<img src="images/VEL/V_decals17.jpg">
 			</div>
 			<div class="row">
-				<img src="images/VEL/V_decals07.jpg" alt="">
+				<img src="images/VEL/V_decals07.jpg">
 			</div>
 			<div class="row">
-				<img src="images/VEL/V_decals08.jpg" alt="">
+				<img src="images/VEL/V_decals08.jpg">
 			</div>
 			<div class="row">
-				<img src="images/VEL/V_decals09.jpg" alt="">
+				<img src="images/VEL/V_decals09.jpg">
 			</div>
 			<div class="row">
-				<img src="images/VEL/V_decals06.jpg" alt="">
+				<img src="images/VEL/V_decals06.jpg">
 			</div>	
 		</div>
 	</section>
