--- a/OPA.html
+++ b/OPA.html
@@ -8,8 +8,34 @@
 	<link rel="stylesheet" href="css/WorkCss.css">
 	<link rel="stylesheet" href="font-awesome/css/all.css">
 	<title>OPA</title>
+	<script>
+		window.addEventListener("load", function () {
+		const loader = document.querySelector(".loader");
+		loader.className += " hidden"; // class "loader hidden"
+		});
+	</script>
 </head>
 <body>
+<div class="loader">
+	<div class="cssload-dots">
+		<div class="cssload-dot"></div>
+		<div class="cssload-dot"></div>
+		<div class="cssload-dot"></div>
+		<div class="cssload-dot"></div>
+		<div class="cssload-dot"></div>
+	</div>
+
+	<svg version="1.1" xmlns="http://www.w3.org/2000/svg">
+		<defs>
+			<filter id="goo">
+				<feGaussianBlur in="SourceGraphic" result="blur" stdDeviation="12" ></feGaussianBlur>
+				<feColorMatrix in="blur" mode="matrix" values="1 0 0 0 0	0 1 0 0 0	0 0 1 0 0	0 0 0 18 -7" result="goo" ></feColorMatrix>
+				<!--<feBlend in2="goo" in="SourceGraphic" result="mix" ></feBlend>-->
+			</filter>
+		</defs>
+	</svg>
+</div>
+
 	<div id="myModal" class="modal">
 			<div class="modal-content">
 				<span class="close">&times;</span>
