--- a/GS.html
+++ b/GS.html
@@ -177,7 +177,7 @@
 	<section class="lightgray">
 	  <div class="title2">
 		<div class="title">
-				<p>Twitter, New chPowerUp, PcComponentes, JD</p>
+				<p>Twitter, Newegg, TechPowerUp, PcComponentes, JD</p>
 				<h1>Media Banner</h1>
 		</div>
 	  </div>
