--- a/Vel.html
+++ b/Vel.html
@@ -311,15 +311,15 @@
 				<h1>Bike Components Decals design</h1>
 		</div>
 	
-		<div class="container_gra">
+		<div class="container_vennDecal">
 			<div class="row2">
-				<img src="images/VEL/V_vennDecal01.jpg" alt="">
+				<img src="images/VEL/V_vennDecal01.jpg">
 			</div>
 			<div class="row2">
-				<img src="images/VEL/V_vennDecal02.jpg" alt="">
+				<img src="images/VEL/V_vennDecal02.jpg">
 			</div>
 			<div class="row2">
-				<img src="images/VEL/V_vennDecal03.jpg" alt="">
+				<img src="images/VEL/V_vennDecal03.jpg">
 			</div>
 		</div>
 	</section>
