--- a/Vel.html
+++ b/Vel.html
@@ -217,21 +217,21 @@
 				<p>Facebook </p>
 				<h1>Post Banner</h1>
 		</div>	
-	 <div class="container_fb">
+	 <div class="container_fb2">
 				<a href="https://www.facebook.com/velocite.bikes/videos/vb.152638792528/10154245890057529/?type=2&theater" target="blank" ><img src="images/VEL/V_banner05.jpg" class="bt" ></a>
-				<img src="images/VEL/V_banner09.jpg">
-				<img src="images/VEL/V_banner02.jpg">
-				<img src="images/VEL/V_banner04.jpg">
-				<img src="images/VEL/V_banner06.jpg">
-				<img src="images/VEL/V_banner15.jpg">
-				<img src="images/VEL/V_banner01.jpg">
-				<img src="images/VEL/V_banner07.jpg">
 				<img src="images/VEL/V_banner12.jpg">
+				<img src="images/VEL/V_banner02.jpg">
+				<img src="images/VEL/V_banner15.jpg">
+				<img src="images/VEL/V_banner10.jpg">
+				<img src="images/VEL/V_banner04.jpg">
+				<img src="images/VEL/V_banner07.jpg">
+				<img src="images/VEL/V_banner01.jpg">
+				<img src="images/VEL/V_banner09.jpg">
 				<img src="images/VEL/V_banner16.jpg">
 				<img src="images/VEL/V_banner14.jpg">
-				<img src="images/VEL/V_banner08.jpg">
-				<img src="images/VEL/V_banner10.jpg">
 				<img src="images/VEL/V_banner17.jpg">
+				<img src="images/VEL/V_banner06.jpg">
+				<img src="images/VEL/V_banner08.jpg">
 				<img src="images/VEL/V_banner13.jpg">	
 	  </div>
 	</section>
