--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta http-equiv="content-type" content="text/html; charset=big5">
 	<meta charset="UTF-8">
 	<link href="images/R_favicon.ico" rel="icon" type="image/x-icon">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -33,7 +32,7 @@
 </div>
 
 <div id="myModal" class="modal">
-			<div class="modal-content">
+			<div class="modal-content" id="myModal-content">
 				<span class="close">&times;</span>
 				     <div class="wrapper">
        					<div class="info">
