--- a/DailyUI.html
+++ b/DailyUI.html
@@ -59,11 +59,11 @@
 							</div>
 							<div class="box one-span">
 								<p>Web</p>
-								<a href="GS.html#GS_web"><img src="images/GS/GS_ov01.jpg"></a>
+								<a href="TK.html#TK_web"><img src="images/tk/tk_event1.png"></a>
 							</div>
 							<div class="box wide-span">
 								<p>UI</p>
-								<a href="OPA.html#opa_ui"><img src="images/opa/opa_ui02.jpg"></a>
+								<a href="TK.html#TK_ui"><img src="images/tk/tk_landingpage2.jpg"></a>
 								<a href="DailyUI.html#ui"><img src="images/dailyUI/003-LandingPage.jpg"></a>
 							</div>
 							
