--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
 							</div>
 							<div class="box one-span">
 								<p>Web</p>
-								<a href="GS.html#GS_web"><img src="images/GS/GS_ov01.jpg"></a>
+								<a href="TK.html#TK_web"><img src="images/tk/tk_event1.png"></a>
 							</div>
 							<div class="box wide-span">
 								<p>UI</p>
-								<a href="OPA.html#opa_ui"><img src="images/opa/opa_ui02.jpg"></a>
+								<a href="TK.html#TK_ui"><img src="images/tk/tk_landingpage2.jpg"></a>
 								<a href="DailyUI.html#ui"><img src="images/dailyUI/003-LandingPage.jpg"></a>
 							</div>
 							
@@ -105,7 +105,17 @@
 		</div>
 	</header>
 <main>
+	
 	<section>
+		<div class="container">
+				<a href="TK.html" class="b6 shadow" data-animate-scroll='{"x": "0","y": "-100", "alpha": "0", "duration": "1"}'>
+					<img src="images/tk/tk_bg2.jpg">
+					<div class="project-info6">
+						<h1>TK3C</h1>
+						<p>e-Commerce web designs</p>
+					</div>
+				</a>
+		</div>
 		<div class="container">
 				<a href="GS.html" class="b1 shadow" data-animate-scroll='{"x": "-100","y": "0", "alpha": "0", "duration": "1"}'>
 					<img src="images/GS/GS_gaming03.jpg">
@@ -148,7 +158,7 @@
 
 <footer>
 	<section>
-		<span>© 2019 Designed by Rong.</span>
+		<span>© 2020 Designed by Rong.</span>
 	</section>
 </footer>
 
