--- a/TK.html
+++ b/TK.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="css/normalize.css">
 	<link rel="stylesheet" href="css/WorkCss.css">
 	<link rel="stylesheet" href="font-awesome/css/all.css">
-	<title>Golden Champion</title>
+	<title>TK3C</title>
 </head>
 <body>
 <div class="loader">
@@ -58,11 +58,11 @@
 							</div>
 							<div class="box one-span">
 								<p>Web</p>
-								<a href="TK.html#TK_web"><img src="images/tk/tk_event1.png"></a>
+								<a href="TK.html#TK_web" onclick="tagFunction()"><img src="images/tk/tk_event1.png"></a>
 							</div>
 							<div class="box wide-span">
 								<p>UI</p>
-								<a href="TK.html#TK_ui"><img src="images/tk/tk_landingpage2.jpg"></a>
+								<a href="TK.html#TK_ui" onclick="tagFunction()"><img src="images/tk/tk_landingpage2.jpg"></a>
 								<a href="DailyUI.html#ui"><img src="images/dailyUI/003-LandingPage.jpg"></a>
 							</div>
 							
@@ -72,17 +72,17 @@
 							</div>
 							<div class="box one-span">
 								<p>Packages</p>
-								<a href="#package" onclick="tagFunction()"><img src="images/GC/GC_packages02.jpg"></a>
+								<a href="GC.html#package"><img src="images/GC/GC_packages02.jpg"></a>
 							</div>
 							<div class="box wide-span">
 								<p>Animation</p>
-								<a href="OPA.html#ani01"><img src="images/opa/opa_ani_hot.jpg"></a>
-								<a href="OPA.html#ani02"><img src="images/opa/opa_ani_cedaw05.jpg"></a>
+								<a href="OPA.html#ani01" ><img src="images/opa/opa_ani_hot.jpg"></a>
+								<a href="OPA.html#ani02" ><img src="images/opa/opa_ani_cedaw05.jpg"></a>
 							</div>
 							<div class="box wide-span">
 								<p>Product</p>
 								<a href="Vel.html#VEL_pro"><img src="images/VEL/V_decals13.jpg"></a>
-								<a href="#GC_pro" onclick="tagFunction()"><img src="images/GC/GC_finials14_1.jpg"></a>
+								<a href="GC.html#GC_pro"><img src="images/GC/GC_finials14_1.jpg"></a>
 							</div>
 						</div>     
     				 </div>
@@ -98,126 +98,183 @@
 	<header>
 		<div class="row">
 				<li><h3>Year</h3></li>
-				<li>2013-2014</li>
+				<li>2020</li>
 		</div>
 		<div class="row">
 				<li><h3>Deliverables</h3></li>
-				<li>Product design</li>
-				<li>Packages design</li>
-				<li>Display design</li>
-				<li>Photography</li>
+				<li>Landing page</li>
+				<li>Website UI</li>
+				<li>Event page</li>
+				<li>Banner</li>
+				<li>EDM</li>
 		</div>
 		<div class="row">
-				<img src="images/GC/GC_logo.svg" style="width: 120px" >
+				<img src="images/tk/logo_tk.svg" style="width:100px";>
 		</div>
 	</header>
 	
-	<div class="GC_BG"></div>
+	<div class="TK_BG"></div>
 	
 <main>
-	<section class="white"  id="GC_pro">
+	<section class="lightgray2" id="TK_ui">
 		<div class="title">
-				<p>Lowes, Walmart, The Home Depot, Menards, USC</p>
-				<h1>Finials design</h1>
+				<p>Apple 旗艦館</p>
+				<h1>Landing page</h1>
 		</div>
-		<div class="container_gra">
-			<div class="row2">
-				<img src="images/GC/GC_finials_sketch01.jpg">
+		<div class="container_landingpage">
+			<div class="row">
+				<img src="images/tk/tk_landingpage1.jpg";>
 			</div>
 			<div class="row">
-				<img src="images/GC/GC_finials_sketch02.jpg">
+				<img src="images/tk/tk_landingpage2.jpg";>
 			</div>
 			<div class="row">
-				<img src="images/GC/GC_finials_sketch03.jpg">
+				<img src="images/tk/tk_landingpage3.jpg";>
 			</div>
 			<div class="row">
-				<img src="images/GC/GC_finials01.jpg">
+				<img src="images/tk/tk_landingpage4.jpg";>
 			</div>
 			<div class="row">
-				<img src="images/GC/GC_finials02.jpg">
+				<img src="images/tk/tk_landingpage5.jpg";>
 			</div>
 			<div class="row">
-				<img src="images/GC/GC_finials03.jpg">
-			</div>
-			<div class="row">
-				<img src="images/GC/GC_finials04.jpg">
-			</div>
-			<div class="row">
-				<img src="images/GC/GC_finials05.jpg">
-			</div>
-			<div class="row">
-				<img src="images/GC/GC_finials06.jpg">
-			</div>
-			<div class="row">
-				<img src="images/GC/GC_finials07.jpg">
-			</div>
-			<div class="row">
-				<img src="images/GC/GC_finials08.jpg">
-			</div>
-			<div class="row">
-				<img src="images/GC/GC_finials09.jpg">
-			</div>
-			<div class="row">
-				<img src="images/GC/GC_finials10.jpg">
-			</div>
-			<div class="row">
-				<img src="images/GC/GC_finials11.jpg">
-			</div>
-			<div class="row">
-				<img src="images/GC/GC_finials12.jpg">
-			</div>
-			<div class="row">
-				<img src="images/GC/GC_finials13.jpg">
-			</div>
-			<div class="row">
-				<img src="images/GC/GC_finials14.jpg">
-			</div>
-			<div class="row2">
-				<img src="images/GC/GC_finials15.jpg">
+				<img src="images/tk/tk_landingpage6.jpg";>
 			</div>
 		</div>
 	</section>
 	
-	<section class="white" id="package">
+	<section class="lightgray2">
 		<div class="title">
-				<p>Design to Fit, Miro</p>
-				<h1>Packages design</h1>
+				<p>Microsoft 旗艦館</p>
+				<h1>Landing page</h1>
 		</div>
-		<div class="container_pack">
-				<img src="images/GC/GC_packages01.png" style="max-width:475px">
-				<img src="images/GC/GC_packages02.jpg" style="max-width:453px">
-				<img src="images/GC/GC_packages03.jpg" style="max-width:497px">
-				<img src="images/GC/GC_packages04.jpg" style="max-width:333px">
-				<img src="images/GC/GC_packages05.jpg" style="max-width:517px">
-				<img src="images/GC/GC_packages06.jpg" style="max-width:470px">
+		<div class="container_landingpage">
+			<div class="row">
+				<img src="images/tk/tk_landingpage7.jpg";>
+			</div>
+			<div class="row">
+				<img src="images/tk/tk_landingpage8.jpg";>
+			</div>
 		</div>
 	</section>
 	
+	<section class="lightgray2">
+		<div class="title">
+				<p>官網商品頁手機版-分期改版優化</p>
+				<h1>Website UI</h1>
+		</div>
+		<div class="container_landingpage">
+			<div class="row">
+				<img src="images/tk/tk_UI1.jpg";>
+			</div>
+		</div>
+	</section>
+
+	<section class="lightgray2">
+		<div class="title">
+				<p>官網門市搜尋頁-卡片改版優化</p>
+				<h1>Website UI</h1>
+		</div>
+		<div class="container_landingpage">
+			<div class="row">
+				<img src="images/tk/tk_UI3.jpg";>
+			</div>
+			<div class="row">
+				<img src="images/tk/tk_UI2.jpg";>
+			</div>
+		</div>
+	</section>
+
+	<section class="lightgray2">
+		<div class="title">
+				<p>Error page</p>
+				<h1>Website UI</h1>
+		</div>
+		<div class="container_landingpage">
+			<div class="row">
+				<img src="images/tk/tk_UI4.jpg";>
+			</div>
+			<div class="row">
+				<img src="images/tk/tk_UI5.jpg";>
+			</div>
+		</div>
+	</section>
+
+	<section class="lightgray" id="TK_web">
+		<div class="title">
+				<p>活動頻道頁 - 3C數位, 家電精選, 現正熱賣, 生活百貨</p>
+				<h1>Event page</h1>
+		</div>
+		<div class="container_landingpage">
+			<div class="row">
+				<img src="images/tk/tk_event1.png";>
+			</div>
+			<div class="row">
+				<img src="images/tk/tk_event2.jpg";>
+			</div>
+			<div class="row">
+				<img src="images/tk/tk_event3.jpg";>
+			</div>
+			<div class="row">
+				<img src="images/tk/tk_event4.jpg";>
+			</div>
+			<div class="row">
+				<img src="images/tk/tk_event5.jpg";>
+			</div>
+			<div class="row">
+				<img src="images/tk/tk_event6.jpg";>
+			</div>
+			<div class="row">
+				<img src="images/tk/tk_event7.jpg";>
+			</div>
+			<div class="row">
+				<img src="images/tk/tk_event8.jpg";>
+			</div>
+			<div class="row">
+				<img src="images/tk/tk_event9.jpg";>
+			</div>
+			<div class="row">
+				<img src="images/tk/tk_event10.jpg";>
+			</div>
+		</div>
+	</section>
+
 	<section class="lightgray">
-	  <div class="title2">
 		<div class="title">
-				<p>Lowes, The Home Depot, Menards</p>
-				<h1>Store Display design</h1>
+				<p>TK3c website, facebook</p>
+				<h1>Banner</h1>
 		</div>
-	  </div>
-		  <div class="container_gra">
-			<div class="row2">
-				<img src="images/GC/GC_display01.png">
+		<div class="container_landingpage">
+			<div class="row">
+				<img src="images/tk/tk_bn1.jpg";>
+			</div>
+			<div class="row">
+				<img src="images/tk/tk_bn2.jpg";>
+			</div>
+			<div class="row">
+				<img src="images/tk/tk_bn3.jpg";>
+			</div>
+			<div class="row">
+				<img src="images/tk/tk_bn4.jpg";>
+			</div>
+			<div class="row">
+				<img src="images/tk/tk_bn5.jpg";>
+			</div>
+			<div class="row">
+				<img src="images/tk/tk_bn6.jpg";>
 			</div>
 			<div class="row2">
-				<img src="images/GC/GC_display02.jpg">
+				<img src="images/tk/tk_bn7.jpg";>
 			</div>
 			<div class="row2">
-				<img src="images/GC/GC_display03.jpg">
+				<img src="images/tk/tk_bn8.jpg";>
 			</div>
 			<div class="row2">
-				<img src="images/GC/GC_display04.jpg">
+				<img src="images/tk/tk_bn9.jpg";>
 			</div>
-			<div class="row2">
-				<img src="images/GC/GC_display05.png">
-			</div>
-		  </div>
+		</div>
 	</section>
+
 </main>
 </div>
 <script src='js/all.js'></script>
