--- a/TK.html
+++ b/TK.html
@@ -123,7 +123,7 @@
 		</div>
 		<div class="container_landingpage">
 			<div class="row">
-				<img src="images/tk/tk_landingpage1.jpg";>
+				<a href="https://events.tk3c.com/events_net/appleshop/index.aspx" target="_blank"><img src="images/tk/tk_landingpage1.jpg";></a>
 			</div>
 			<div class="row">
 				<img src="images/tk/tk_landingpage2.jpg";>
