--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
      							<div></div>
       							<div>
      								<p><a href="tel:0988702660"><i class="fas fa-mobile-alt" style="font-size: 1.2em"></i> 0988-702660</a></p>
-									<p><a href="mailto:long20031001@hotmail.com"><i class="far fa-envelope" style="font-size: 1em"></i> long20031001@hotmail.com</a></p>
+									<p><a href="mailto:yinccleta@gmail.com"><i class="far fa-envelope" style="font-size: 1em"></i> yinccleta@gmail.com</a></p>
      							</div>
        					</div>
         				<div class="row">
@@ -58,13 +58,13 @@
 								<a href="Vel.html#VEL_BI"><img src="images/VEL/V_bi_01.png"></a>
 							</div>
 							<div class="box one-span">
-								<p>Web</p>
-								<a href="TK.html#TK_web"><img src="images/tk/tk_event1.png"></a>
+								<p>Animation</p>
+								<a href="OPA.html#ani01" ><img src="images/opa/opa_ani_hot.jpg"></a>
 							</div>
 							<div class="box wide-span">
 								<p>UI</p>
 								<a href="TK.html#TK_ui"><img src="images/tk/tk_landingpage2.jpg"></a>
-								<a href="DailyUI.html#ui"><img src="images/dailyUI/003-LandingPage.jpg"></a>
+								<a href="iisi.html#iisi_ui"><img src="images/iisi/banner4.png"></a>
 							</div>
 							
 							<div class="box one-span">
@@ -76,9 +76,9 @@
 								<a href="GC.html#package"><img src="images/GC/GC_packages02.jpg"></a>
 							</div>
 							<div class="box wide-span">
-								<p>Animation</p>
-								<a href="OPA.html#ani01"><img src="images/opa/opa_ani_hot.jpg"></a>
-								<a href="OPA.html#ani02"><img src="images/opa/opa_ani_cedaw05.jpg"></a>
+								<p>Website</p>
+								<a href="TK.html#TK_web"><img src="images/tk/tk_event1.png"></a>
+								<a href="iisi.html#iisi_web"><img src="images/iisi/vote01.png"></a>
 							</div>
 							<div class="box wide-span">
 								<p>Product</p>
@@ -99,20 +99,29 @@
 	<header>
 		<div class="name">
 			<div><img src="images/RRLogo_01.svg" style="width: 80%"></div>
-			<h1>Hi, I'm Rongrong. I'm a visual designer with a focus on branding.</h1>
+			<h1>Hi, I'm Rongrong. I’m a visual designer and an interface designer who values user experience design.</h1>
 			<br>
-			<p>Here are my work, I'm pround of doing these designs.</p>
+			<p>Here are my works, I'm proud of these designs.</p>
 		</div>
 	</header>
 <main>
 	
 	<section>
 		<div class="container">
+			<a href="iisi.html" class="b7 shadow" data-animate-scroll='{"x": "100","y": "0", "alpha": "0", "duration": "1"}'>
+				<img src="images/iisi/iisi_bg.png">
+				<div class="project-info7">
+					<h1>iisi</h1>
+					<p>App UI/UX & Website design</p>
+				</div>
+			</a>
+	</div>
+		<div class="container">
 				<a href="TK.html" class="b6 shadow" data-animate-scroll='{"x": "0","y": "-100", "alpha": "0", "duration": "1"}'>
 					<img src="images/tk/tk_bg2.jpg">
 					<div class="project-info6">
 						<h1>TK3C</h1>
-						<p>e-Commerce web designs</p>
+						<p>e-Commerce Landing page design</p>
 					</div>
 				</a>
 		</div>
@@ -121,14 +130,14 @@
 					<img src="images/GS/GS_gaming03.jpg">
 					<div class="project-info1">
 						<h1>G.Skill</h1>
-						<p>Gaming style graphics and videos</p>
+						<p>Game graphic design and video</p>
 					</div>
 				</a>
 				<a href="Vel.html" class="b2" data-animate-scroll='{"x": "100","y": "0", "alpha": "0", "duration": "1"}'>
 					<img src="images/VEL/V_bg_s.jpg">
 					<div class="project-info2">
 						<h1>Velocite</h1>
-						<p>Bikes brand design</p>
+						<p>Bike brand design</p>
 					</div>
 				</a>
 				<a href="OPA.html" class="b3" data-animate-scroll='{"x": "0","y": "100", "alpha": "0", "duration": "1"}'>
@@ -145,12 +154,6 @@
 						<p>Finials design</p>
 					</div>
 				</a>
-				<a href="DailyUI.html" class="b5" data-animate-scroll='{"x": "-100","y": "0", "alpha": "0", "duration": "1"}'>
-					<div>
-						<h1>Daily UI</h1>
-						<p>Become a better designer in 100 days</p>
-					</div>
-				</a>
 		</div>
 	</section>
 </main>
@@ -158,7 +161,7 @@
 
 <footer>
 	<section>
-		<span>© 2020 Designed by Rong.</span>
+		<span>© 2025 Designed by Rong.</span>
 	</section>
 </footer>
 
