--- a/Vel.html
+++ b/Vel.html
@@ -43,7 +43,7 @@
      							<div></div>
       							<div>
      								<p><a href="tel:0988702660"><i class="fas fa-mobile-alt" style="font-size: 1.2em"></i> 0988-702660</a></p>
-									<p><a href="mailto:long20031001@hotmail.com"><i class="far fa-envelope" style="font-size: 1em"></i> long20031001@hotmail.com</a></p>
+									<p><a href="mailto:yinccleta@gmail.com"><i class="far fa-envelope" style="font-size: 1em"></i> yinccleta@gmail.com</a></p>
      							</div>
        					</div>
         				<div class="row">
@@ -57,13 +57,13 @@
 								<a href="#VEL_BI" onclick="tagFunction()"><img src="images/VEL/V_bi_01.png"></a>
 							</div>
 							<div class="box one-span">
-								<p>Web</p>
-								<a href="TK.html#TK_web"><img src="images/tk/tk_event1.png"></a>
+								<p>Animation</p>
+								<a href="OPA.html#ani01" ><img src="images/opa/opa_ani_hot.jpg"></a>
 							</div>
 							<div class="box wide-span">
 								<p>UI</p>
 								<a href="TK.html#TK_ui"><img src="images/tk/tk_landingpage2.jpg"></a>
-								<a href="DailyUI.html#ui"><img src="images/dailyUI/003-LandingPage.jpg"></a>
+								<a href="iisi.html#iisi_ui" ><img src="images/iisi/banner4.png"></a>
 							</div>
 							
 							<div class="box one-span">
@@ -75,9 +75,9 @@
 								<a href="GC.html#package"><img src="images/GC/GC_packages02.jpg"></a>
 							</div>
 							<div class="box wide-span">
-								<p>Animation</p>
-								<a href="OPA.html#ani01"><img src="images/opa/opa_ani_hot.jpg"></a>
-								<a href="OPA.html#ani02"><img src="images/opa/opa_ani_cedaw05.jpg"></a>
+								<p>Website</p>
+								<a href="TK.html#TK_web"><img src="images/tk/tk_event1.png"></a>
+								<a href="iisi.html#iisi_web"><img src="images/iisi/vote01.png"></a>
 							</div>
 							<div class="box wide-span">
 								<p>Product</p>
@@ -115,7 +115,9 @@
 	</header>
 	
 	<div class="V_BG"></div>
-	
+	<div class="content">
+		<div style="height: 400px;"></div>
+	</div>
 <main>
 	<section class="white" id="VEL_BI">
 		<div class="title">
