--- a/iisi.html
+++ b/iisi.html
@@ -153,7 +153,7 @@
 			</div>
 			<div class="row">
 				<h5>學校即時天氣與未來三小時天氣預報</h5>
-				<img src="images/iisi/app02.png";>
+				<img src="images/iisi/app02.jpg";>
 			</div>
 			<div class="row">
 				<h5>學校天氣即時搜:點按搜尋bar</h5>
@@ -165,11 +165,11 @@
 			</div>
 			<div class="row">
 				<h5>學校天氣即時搜:選取學校查看天氣</h5>
-				<img src="images/iisi/app09.png";>
+				<img src="images/iisi/app09.jpg";>
 			</div>
 			<div class="row">
 				<h5>學校天氣即時搜:加入學校清單</h5>
-				<img src="images/iisi/app10.png";>
+				<img src="images/iisi/app10.jpg";>
 			</div>
 			<div class="row">
 				<h5>編輯學校清單:開啓關閉/刪除/順序</h5>
@@ -202,7 +202,7 @@
 			</div>
 			<div class="row">
 				<h5>學校即時天氣-紫外線防護提示</h5>
-				<img src="images/iisi/app03.png";>
+				<img src="images/iisi/app03.jpg";>
 			</div>
 			<div class="row">
 				<video loop="true" autoplay="true" muted="true"  controls="true" preload="auto" width="100%" max-width="600px" max-height="620px" margin-bottom="-20px">
@@ -211,7 +211,7 @@
 			</div>
 			<div class="row">
 				<h5>學校即時天氣-認識風向風速</h5>
-				<img src="images/iisi/app04.png";>
+				<img src="images/iisi/app04.jpg";>
 			</div>
 			<div class="row">
 				<video loop="true" autoplay="true" muted="true"  controls="true" preload="auto" width="100%" max-width="600px" max-height="620px" margin-bottom="-20px">
@@ -220,7 +220,7 @@
 			</div>
 			<div class="row">
 				<h5>學校即時天氣-空氣品質防護提示</h5>
-				<img src="images/iisi/app06.png";>
+				<img src="images/iisi/app06.jpg";>
 			</div>
 			<div class="row">
 				<video loop="true" autoplay="true" muted="true"  controls="true" preload="auto" width="100%" max-width="600px" max-height="620px" margin-bottom="-20px">
@@ -228,12 +228,12 @@
 				</video>
 			</div>
 			<div class="row">
-				<img src="images/iisi/app01.png";>
+				<img src="images/iisi/app01.jpg";>
 			</div>
 		</div>
 		<div class="container_landingpage">
 			<div class="row">
-				<img src="images/iisi/ICONform.png";>
+				<img src="images/iisi/ICONform.jpg";>
 			</div>
 		</div>
 	</section>
@@ -251,7 +251,7 @@
 			<div class="row">
 				<h5>衛星雲圖-色調強化</h5>
 				<a class="more" href="https://xd.adobe.com/view/36b85680-8151-49ad-b8fb-c14bf0754d7c-63eb/screen/9945f6c3-739c-4259-baaa-14d2f8e42cf9/specs/">
-				<img src="images/iisi/wui01.png";></a>
+				<img src="images/iisi/wui01.jpg";></a>
 			</div>
 			<div class="row">
 				<h5>雷達回波-有地形</h5>
@@ -305,12 +305,12 @@
 		<br>
 		<div class="container_landingpage">
 			<div class="row">
-				<img src="images/iisi/wui00.png";>
+				<img src="images/iisi/wui00.jpg";>
 			</div>
 		</div>
 		<div class="container_landingpage">
 			<a class="row prototype" href="https://xd.adobe.com/view/36b85680-8151-49ad-b8fb-c14bf0754d7c-63eb/specs/" target="_blank">
-				prototype online
+				prototype
 			</a>
 		</div>
 		<div class="title">
@@ -320,7 +320,7 @@
 		<div class="container_v school">
 			<div class="row">
 				<h5>舊版:無法看到鄉鎮與地形等詳細資訊</h5>
-				<img src="images/iisi/old06.png";>
+				<img src="images/iisi/old06.jpg";>
 			</div>
 			<div class="row">
 				<h5>新版:列出受影響的縣市燈號及說明</h5>
@@ -365,19 +365,19 @@
 				</video>
 			</div>
 			<div class="row">
-				<h5>首頁-RWD前端切版</h5>
-				<a href="https://evisit.cwa.gov.tw" target="_blank"><img src="images/iisi/e-visit.jpg";></a>
+				<h5>團體參訪入口</h5>
+				<a href="https://evisit.cwa.gov.tw/station" target="_blank"><img src="images/iisi/e-visit1.jpg";></a>
 			</div>
 			<div class="row">
-				<h5>團體參訪申請頁-RWD前端切版</h5>
+				<h5>團體參訪申請頁</h5>
 				<a href="https://evisit.cwa.gov.tw/reservation?unit_id=A005" target="_blank"><img src="images/iisi/e-visit02.jpg";></a>
 			</div>
 			<div class="row">
-				<h5>洽公申請頁-RWD前端切版</h5>
+				<h5>洽公申請頁</h5>
 				<a href="https://evisit.cwa.gov.tw/visitOffice" target="_blank"><img src="images/iisi/e-visit05.jpg";></a>
 			</div>		
 			<div class="row">
-				<h5>問卷調查頁-RWD前端切版</h5>
+				<h5>問卷調查頁</h5>
 				<img src="images/iisi/survey.jpg";>
 			</div>
 		</div>
@@ -427,10 +427,10 @@
 		</div>
 		<div class="container_v school">
 		<div class="row">
-			<img src="images/iisi/banner1.png";>
+			<img src="images/iisi/banner1.jpg";>
 		</div>
 		<div class="row">
-			<img src="images/iisi/banner2.png";>
+			<img src="images/iisi/banner2.jpg";>
 		</div>
 		<div class="row">
 			<img src="images/iisi/banner3.jpg";>
@@ -558,7 +558,7 @@
 		</div>
 		<div class="row">
 			<h5>樂活氣象宣導貼紙</h5>
-			<img src="images/iisi/A6_sticker.png";>
+			<img src="images/iisi/A6_sticker.jpg";>
 		</div>
 	</section>
 </main>
