--- a/iisi.html
+++ b/iisi.html
@@ -289,7 +289,7 @@
 			</div>
 			<div class="row">
 				<h5>氣象圖說懸浮按鈕選單</h5>
-				<img src="images/iisi/floatingBTmenu.png";>
+				<img src="images/iisi/floatingBTmenu.PNG";>
 			</div>
 			
 			<div class="row">
