--- a/iisi.html
+++ b/iisi.html
@@ -112,9 +112,8 @@
 	</header>
 	
 	<div class="iisi_BG"></div>
-	<div class="content">
-		<div style="height: 400px;"></div>
-	</div>
+	<div class="content"></div>
+	
 <main>
 	<section class="lightgray2"  id="iisi_ui">
 		<div class="title">
