--- a/TK.html
+++ b/TK.html
@@ -113,9 +113,7 @@
 	</header>
 	
 	<div class="TK_BG"></div>
-	<div class="content">
-		<div style="height: 400px;"></div>
-	</div>
+	<div class="content"></div>
 <main>
 	<section class="lightgray2" id="TK_ui">
 		<div class="title">
