--- a/Vel.html
+++ b/Vel.html
@@ -115,9 +115,7 @@
 	</header>
 	
 	<div class="V_BG"></div>
-	<div class="content">
-		<div style="height: 400px;"></div>
-	</div>
+	<div class="content"></div>
 <main>
 	<section class="white" id="VEL_BI">
 		<div class="title">
