--- a/GC.html
+++ b/GC.html
@@ -113,9 +113,7 @@
 	</header>
 	
 	<div class="GC_BG"></div>
-	<div class="content">
-		<div style="height: 400px;"></div>
-	</div>
+	<div class="content"></div>
 <main>
 	<section class="white"  id="GC_pro">
 		<div class="title">
