--- a/GS.html
+++ b/GS.html
@@ -115,9 +115,7 @@
 	</header>
 	
 	<div class="BG"></div>
-	<div class="content">
-		<div style="height: 400px;"></div>
-	</div>
+	<div class="content"></div>
 <main>	
 	<section class="gray" id="GS_gra">
 		<div class="title">
