--- a/OPA.html
+++ b/OPA.html
@@ -115,9 +115,7 @@
 	</header>
 	
 	<div class="OPA_BG"></div>
-	<div class="content">
-		<div style="height: 400px;"></div>
-	</div>
+	<div class="content"></div>
 <main>
 	<section class="white" id="opa_ui">
 		<div class="title">
