--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 	<header>
 		<div class="name">
 			<div><img src="images/RRLogo_01.svg" style="width: 80%"></div>
-			<h1>Hi, I'm Rongrong. I’m a visual designer and an interface designer who values user experience design.</h1>
+			<h1>Hi, I'm Rongrong. I’m a visual and UI/UX designer.</h1>
 			<br>
 			<p>Here are my works, I'm proud of these designs.</p>
 		</div>
