--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 								<div><img src="images/r.png"></div>
      							<div>
      								<p class="info_name">Rongrong Hu</p>
-									<p>Visual designer</p>
+									<p>Visual and UI/UX designer</p>
      							</div>
      							<div></div>
       							<div>
