--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 </div>
 
 <div id="myModal" class="modal">
-			<div class="modal-content" id="myModal-content">
+			<div class="modal-content">
 				<span class="close">&times;</span>
 				     <div class="wrapper">
        					<div class="info">
